cleanup elastic client